# ddd_pokemon

./: .gitignore  README.md  docker-compose.yml  envExample  manage.py  pyproject.toml  pytest.ini  secret.yaml   web-deployment.yaml  web-service.yaml
pokemon/: urls.py
pokemon/application/: abstract_factory.py  serializers.py  services.py  views.py
pokemon/domain/: pokemon_service.py  pokemon_service_abstract.py  services.py
pokemon/infrastructure/: models.py  pokemon_repository.py  serializers.py  views.py
pokemon/infrastructure/interfaces/: pokemon_repository_interfaces.py
pokemon/infrastructure/models/: pokemon_models.py
pokemon/tests/: test_repository.py  test_repository_integration.py  test_service_integration.py  test_services.py  test_view_integration.py
pokemon_project/: asgi.py  settings.py  urls.py  wsgi.py
pokemon_project/settings/: base.py  development.py  production.py  staging.py
