[tool.poetry]
name = "pokemon-proxy"
version = "0.1.0"
description = "A Django REST API that proxies Pokémon abilities"
authors = ["Yasser Azan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
djangorestframework = "^3.15.2"
requests = "^2.32.3"
drf-yasg = "^1.21.7"
python-dotenv = "^1.0.1"
django-ratelimit = "^4.1.0"
django-redis = "^5.4.0"


[tool.poetry.group.dev.dependencies]
requests-mock = "^1.12.1"
pytest = "^8.2.2"
pytest-django = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
